--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^6.2",
         "laravel/telescope": "^2.1",
         "laravel/tinker": "^2.0",
+        "spatie/array-to-xml": "^2.11",
         "tymon/jwt-auth": "^1.0.0"
     },
     "require-dev": {
